export class Grade {
  constructor(public value: number) {}
}
